demos/pbs-spring-petclinic/files/spring-petclinic-ingress-template_tls.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 annotations:
   kubernetes.io/ingress.class: nginx
 name: spring-petclinic-ingress
spec:
 rules:
 - host: spring-petclinic.DOMAIN
   http:
     paths:
     - backend:
         serviceName: spring-petclinic
         servicePort: 8080

 tls:
 - hosts:
   - spring-petclinic.DOMAIN
   secretName: spring-petclinic-certs
